--- a/EqUiWebUi/Areas/VASC/Views/Breakdown/_getJobs.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/Breakdown/_getJobs.cshtml
@@ -1,21 +1,21 @@
 ﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.rt_job>
 @Html.Grid(Model).Named("rtjobGrid").Build(columns =>
 {
-    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Desc).Css("d-none");
+    columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Desc).Css("tablesaw-priority-0");
     columns.Add(c => c.bodyNo).Titled("bodyNo");
-    columns.Add(c => c.c_controller.controller_name).Titled("controller_name");
+    columns.Add(c => c.c_controller.controller_name).Titled("controller_name").Css("tablesaw-priority-presistent");
     columns.Add(c => c.ts_Start).Titled("CycleStart").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
     columns.Add(c => c.ts_End).Titled("CycleEnd").Formatted("{0:HH:mm:ss}");
     columns.Add(c => c.ts_breakDownStart).Titled("ts_breakdownStart").Formatted("{0:HH:mm:ss}");
-    columns.Add(c => (c.ts_breakDownAck - c.ts_breakDownStart)).Titled("AckTime");
-    columns.Add(c => (c.ts_breakDownEnd - c.ts_breakDownAck)).Titled("RepTime");
-    columns.Add(c => (c.ts_breakDownEnd - c.ts_breakDownStart)).Titled("StopTime");
-    columns.Add(c => c.breakDownCount).Titled("SubstopCount");
+    columns.Add(c => (c.ts_breakDownAck - c.ts_breakDownStart)).Titled("AckTime").Css("tablesaw-priority-5");
+    columns.Add(c => (c.ts_breakDownEnd - c.ts_breakDownAck)).Titled("RepTime").Css("tablesaw-priority-5");
+    columns.Add(c => (c.ts_breakDownEnd - c.ts_breakDownStart)).Titled("StopTime").Css("tablesaw-priority-5");
+    columns.Add(c => c.breakDownCount).Titled("SubstopCount").Css("tablesaw-priority-0");
     columns.Add(c => c.rt_job_breakdown.FirstOrDefault().h_alarm.L_error._Logtext).Titled("H_Logtext").Filterable(false);
     columns.Add(c => c.rt_job_breakdown.FirstOrDefault().rt_alarm.description).Titled("RT_Logtext").Filterable(false);
-    columns.Add(c => c.rt_job_breakdown.FirstOrDefault().phase1).Titled("phase1").Filterable(false);
+    columns.Add(c => c.rt_job_breakdown.FirstOrDefault().phase1).Titled("phase1").Css("tablesaw-priority-0").Filterable(false);
     columns.Add(c => c)
-               .Titled("Job")
+               .Titled("Tools")
                .Encoded(false)
                .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("rtJob", "Breakdown", new { Area = "VASC", jobID = c.id }), "fas fa-info-circle", "", "show vasc job details")
                ).Filterable(false);
@@ -24,4 +24,4 @@
     pager.RowsPerPage = 20;
     pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
     pager.ShowPageSizes = true;
-}).Empty("Did not find anything").Css("table-hover")
+}).Empty("Did not find anything").Css("table-hover  tablesaw-on")
