--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -1,10 +1,9 @@
-﻿@model IQueryable<EqUiWebUi.Areas.VASC.Models.c_controller>
+﻿@model List<EqUiWebUi.Areas.VASC.Models.c_controller>
 
 @Html.Grid(Model).Named("c_controllerGrid").Build(columns =>
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
-    columns.Add(c => c.enable_bit).Titled("eb");
     columns.Add(c => c.controller_name).Titled("controller_name");
     columns.Add(c => c.systemId).Titled("systemId").Css("tablesaw-priority-6");
     columns.Add(c => c.ip).Titled("ip").Css("tablesaw-priority-6");
