--- a/EqUiWebUi/Content/CustomStyleTweeks.css
+++ b/EqUiWebUi/Content/CustomStyleTweeks.css
@@ -36,3 +36,7 @@ body {
     font-weight: bold;
 }
 
+/*latest bootstrap update made default btn transparent*/
+.btn{
+    border-color: lightgray
+}
