--- a/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
@@ -12,8 +12,8 @@
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
-                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit", OpenNewWindow: true).ToHtmlString() +
-                     MyHtmlHelpers.IconActionLink(Url.Action("GetCsvFileData", new { c_csv_log_id = c.id, controller_id = ViewBag.controller_id }), "fas fa-file", "", "GetCsvFileData", OpenNewWindow: true).ToHtmlString()
+                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Open edit", OpenNewWindow: true).ToHtmlString() +
+                     MyHtmlHelpers.IconActionLink(Url.Action("GetCsvFileData", new { c_csv_log_id = c.id, controller_id = ViewBag.controller_id }), "fas fa-file", "", "Open GetCsvFileData", OpenNewWindow: true).ToHtmlString()
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
