--- a/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/L_operation/_List.cshtml
@@ -6,10 +6,15 @@
     columns.Add(c => c.C_timestamp).Titled("_timestamp").Css("tablesaw-priority-6");
     columns.Add(c => c.code).Titled("code").Css("tablesaw-priority-0");
     columns.Add(c => c._L_operationCode).Titled("Operation").Css("tablesaw-priority-persist");
-    columns.Add(c => c.Vasc_name).Titled("Vasc_name").Css("tablesaw-priority-0");
+    columns.Add(c => c.Vasc_name).Titled("Vasc_name");
     columns.Add(c => c.controller_id).Titled("controller_id").Css("tablesaw-priority-0");
     columns.Add(c => c.c_controller.controller_name).Titled("controller_name").Css("tablesaw-priority-persist");
     columns.Add(c => c.Description).Titled("Description").Css("tablesaw-priority-1");
+    columns.Add(c => c)
+                .Titled("Tools")
+                .Encoded(false)
+                .RenderedAs(c => c.controller_id.HasValue ? MyHtmlHelpers.IconActionLink(Url.Action("index", "c_controller_class", new { controller_id = c.controller_id }), "fas fa-file", "", "Goto c_controller_class for this controller").ToHtmlString() : ""
+                ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 10;
