--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/_Details.cshtml
@@ -8,7 +8,8 @@
             (Robots connected to this class)
             @if (ViewBag.controller_id != null)
             {<strong>Filtered on controllerID: @ViewBag.controller_id</strong>}
-            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_controller", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a controller", OpenNewWindow: true)
+            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_controller", new { id = -1 }), "fas fa-pencil-alt", "Create", "Open create a controller", OpenNewWindow: true)
+      
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -25,7 +26,7 @@
             <a class="clickable far fa-window-restore text-black-50" href="@Url.Action("Index", "c_variable")" data-toggle="tooltip" title="Direct link to this view"></a>
             <strong>c_variable</strong>
             (Rapid variables or IO signals handled *logged to a table or used as event)
-            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_variable", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a variable to log", OpenNewWindow: true)
+            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_variable", new { id = -1 }), "fas fa-pencil-alt", "Create", "Open create a variable to log", OpenNewWindow: true)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -42,7 +43,7 @@
             <a class="clickable far fa-window-restore text-black-50" href="@Url.Action("Index", "c_variable_search")" data-toggle="tooltip" title="Direct link to this view"></a>
             <strong>c_variable_search</strong>
             (Rapid variables to be search for at startup and logged to a table)
-            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_variable_search", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a variable to search and log", OpenNewWindow: true)
+            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_variable_search", new { id = -1 }), "fas fa-pencil-alt", "Create", "Open create a variable to search and log", OpenNewWindow: true)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -59,7 +60,7 @@
             <a class="clickable far fa-window-restore text-black-50" href="@Url.Action("Index", "c_error")" data-toggle="tooltip" title="Direct link to this view"></a>
             <strong>c_error</strong>
             (alarms from controller event log can be setup to be ignored or redirected to junk table)
-            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_error", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a rule to ignore log messages", OpenNewWindow: true)
+            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_error", new { id = -1 }), "fas fa-pencil-alt", "Create", "Open create a rule to ignore log messages", OpenNewWindow: true)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
@@ -76,7 +77,7 @@
             <a class="clickable far fa-window-restore text-black-50" href="@Url.Action("Index", "c_csv_log")" data-toggle="tooltip" title="Direct link to this view"></a>
             <strong>c_csv_log</strong>
             (CSV file type file to be monitored and logged to a table)
-            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_csv_log", new { id = -1 }), "fas fa-pencil-alt", "Create", "add a csv file to log", OpenNewWindow: true)
+            @MyHtmlHelpers.IconActionLink(Url.Action("Edit", "c_csv_log", new { id = -1 }), "fas fa-pencil-alt", "Create", "Open create a csv file to log", OpenNewWindow: true)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
