--- a/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_device_info/_List.cshtml
@@ -10,8 +10,8 @@
     columns.Add(c => c)
                         .Titled("")
                         .Encoded(false)
-                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit", OpenNewWindow: true).ToHtmlString() +
-                     MyHtmlHelpers.IconActionLink(Url.Action("GetDeviceInfoData", new { c_device_info_id = c.id, controller_id = ViewBag.controller_id }), "fas fa-file", "", "GetDeviceInfoData", OpenNewWindow: true).ToHtmlString()
+                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Open edit", OpenNewWindow: true).ToHtmlString() +
+                     MyHtmlHelpers.IconActionLink(Url.Action("GetDeviceInfoData", new { c_device_info_id = c.id, controller_id = ViewBag.controller_id }), "fas fa-file", "", "Open GetDeviceInfoData", OpenNewWindow: true).ToHtmlString()
                         ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
