--- a/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_error/_List.cshtml
@@ -15,7 +15,7 @@
     columns.Add(c => c)
                     .Titled("Tools")
                     .Encoded(false)
-                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit", OpenNewWindow: true).ToHtmlString()
+                    .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Open edit", OpenNewWindow: true).ToHtmlString()
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
