--- a/EqUiWebUi/Areas/VASC/Views/rt_active_info/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/rt_active_info/Index.cshtml
@@ -53,8 +53,11 @@
     columns.Add(c => c)
             .Titled("Tools")
             .Encoded(false)
-            .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Index", "c_controller_class", new { controller_id = c.c_controller_id },null), "fas fa-pencil-alt", "", "Goto controller").ToHtmlString() +
-            MyHtmlHelpers.IconActionLink(Url.Action("Index", "l_operation", new { controller_id = c.c_controller_id, sessionName = c.vasc_session }, null), "fas fa-file", "", "Operation log").ToHtmlString()
+            .RenderedAs(c => MyHtmlHelpers.IconActionLink(Url.Action("Index", "c_controller_class", new { controller_id = c.c_controller_id },null), "fas fa-pencil-alt", "", "Goto controller_class for this controller").ToHtmlString() +
+            MyHtmlHelpers.IconActionLink(Url.Action("Index", "l_operation", new { controller_id = c.c_controller_id, sessionName = c.vasc_session }, null), "fas fa-file", "", "Open operation log", OpenNewWindow:true).ToHtmlString() +
+            MyHtmlHelpers.IconActionLink(Url.Action("GetJobs", "Breakdown", new { controller_id = c.c_controller_id }), "fas fa-vial", "", "Open get jobs", OpenNewWindow: true).ToHtmlString() +
+            MyHtmlHelpers.IconActionLink(Url.Action("GetJobs", "Breakdown", new { controller_id = c.c_controller_id, hasBreakdowns = true }), "fas fa-vial text-warning", "", "Open breakdowns", OpenNewWindow: true).ToHtmlString() +
+            MyHtmlHelpers.IconActionLink(Url.Action("GetEvents", "Eventlog", new { controller_id = c.c_controller_id }), "fas fa-vial", "", "Open controller h_alarm", OpenNewWindow: true).ToHtmlString()
             ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
