--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -15,8 +15,9 @@
                      MyHtmlHelpers.IconActionLink(Url.Action("index","c_controller_class", new { controller_id = c.id }), "fas fa-file", "", "Goto c_controller_class for this controller").ToHtmlString() +
                      MyHtmlHelpers.IconActionLink(Url.Action("GetJobs", "Breakdown", new { controller_id = c.id }), "fas fa-vial", "", "Open get jobs", OpenNewWindow: true).ToHtmlString() +
                      MyHtmlHelpers.IconActionLink(Url.Action("GetJobs", "Breakdown", new { controller_id = c.id, hasBreakdowns = true }), "fas fa-vial text-warning", "", "Open breakdowns", OpenNewWindow: true).ToHtmlString() +
-                     MyHtmlHelpers.IconActionLink(Url.Action("GetEvents", "Eventlog", new { controller_id = c.id}), "fas fa-vial", "", "Open controller h_alarm", OpenNewWindow: true).ToHtmlString() +
-                     MyHtmlHelpers.IconActionLink(Url.Action("Index", "l_operation", new { controller_id = c.id }, null), "fas fa-file", "", "Open operation log", OpenNewWindow:true).ToHtmlString() 
+                     MyHtmlHelpers.IconActionLink(Url.Action("Get_h_alarm", "Eventlog", new { controller_id = c.id}), "fas fa-vial", "", "Open controller h_alarm", OpenNewWindow: true).ToHtmlString() +
+                     MyHtmlHelpers.IconActionLink(Url.Action("Get_rt_alarm", "Eventlog", new { controller_id = c.id }), "fas fa-vial", "", "Open controller rt_alarm (junk)", OpenNewWindow: true).ToHtmlString() +
+                     MyHtmlHelpers.IconActionLink(Url.Action("Index", "l_operation", new { controller_id = c.id }, null), "fas fa-file", "", "Open operation log", OpenNewWindow:true).ToHtmlString()
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
