mistake in csproject

--- a/EqUiWebUi/Views/Home/Contact.cshtml
+++ b/EqUiWebUi/Views/Home/Contact.cshtml
@@ -88,23 +88,23 @@
     <hr />
     <div class="row">
         <div class="col-6">
-            @MyHtmlHelpers.EquiLink("https://gensvw1178.gen.volvocars.net", "fas fa-flag", "VCG", helperText: "Volvo cars Ghent (production)")
+            @MyHtmlHelpers.EquiLink("https://gensvw1178.gen.volvocars.net", "fas fa-flag", "VCG (production)", helperText: "Volvo cars Ghent")
         </div>
         <div class="col-6">
-            @MyHtmlHelpers.EquiLink("http://gensvw1178.gen.volvocars.net:666", "fas fa-flag", "VCG", helperText: "Volvo cars Ghent (development)")
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-6">
-            @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net", "fas fa-flag", "VCCH", helperText: "Volvo cars Charleston (production)")
-        </div>
-        <div class="col-6">
-            @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net:666", "fas fa-flag", "VCCH", helperText: "Volvo cars Charleston (development)")
+            @MyHtmlHelpers.EquiLink("http://gensvw1178.gen.volvocars.net:666", "fas fa-flag", "VCG (development)", helperText: "Volvo cars Ghent")
         </div>
     </div>
     <div class="row">
         <div class="col-6">
-            @MyHtmlHelpers.EquiLink("http://gotsvw11292.got.volvocars.net", "fas fa-flag", "VCT", helperText: "Volvo cars Torslanda (inactive)")
+            @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net", "fas fa-flag", "VCCH (production)", helperText: "Volvo cars Charleston")
+        </div>
+        <div class="col-6">
+            @MyHtmlHelpers.EquiLink("http://chasvw1203.cha.volvocars.net:666", "fas fa-flag", "VCCH (development)", helperText: "Volvo cars Charleston")
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-6">
+            @MyHtmlHelpers.EquiLink("http://gotsvw11292.got.volvocars.net", "fas fa-flag", "VCT (inactive)", helperText: "Volvo cars Torslanda")
         </div>
         <div class="col-6">
           
