--- a/EqUiWebUi/Areas/Welding/Views/Inspectionplans/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Inspectionplans/Index.cshtml
@@ -10,8 +10,8 @@
 
 @Html.Grid(Model).Named("Inspectionplan").Build(columns =>
 {
-    columns.Add(c => c.ID).Titled("id").Css("bolded");
-    columns.Add(c => c.Name).Titled("inspectionplan").Css("bolded").InitialSort(GridSortOrder.Desc); 
+    columns.Add(c => c.ID).Titled("id").Css("bolded").Css("bolded").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.Name).Titled("inspectionplan");
     columns.Add(c => c.PlanActive).Titled("planactive");
     columns.Add(c => c.SpotIdent).Titled("spotIdent");
     columns.Add(c => c.SpotBefore).Titled("spoBefore");
@@ -25,7 +25,7 @@
                         .RenderedAs(c =>
 
                         MyHtmlHelpers.IconActionLink(Url.Action("Edit", new { id = c.ID }), "fas fa-pencil-alt", "", "Edit this spot").ToHtmlString()
-                        
+
                         ).Filterable(false);
 
 
