--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -27,9 +27,13 @@
             <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">Aro Technician Alerts &raquo;</a>
             Cylinder/SBCU data triggers
         </p>
+
+        <a href="~/Welding/Welding/_alertsAASPOT" class="btn btn-primary btn-sm">WeldingT Alerts &raquo;</a>
+        WeldingTeam Supervision Alerts
+        </p>
         <p>
-            <a href="~/Welding/Welding/_alertsAASPOT" class="btn btn-primary btn-sm">WeldingT Alerts &raquo;</a>
-            WeldingTeam Supervision Alerts
+            <a href="~/Welding/Welding/ppmreweld" class="btn btn-primary btn-sm">kpi rewelds &raquo;</a>
+            kpi rewelds process stability
         </p>
 
 
